@@ -6,6 +6,12 @@
     <email>mmokrejs@fold.natur.cuni.cz</email>
     <name>Martin Mokrejs</name>
   </maintainer>
+  <longdescription>
+    Atlas2 is a next-generation sequencing suite of variant analysis
+    tools specializing in the separation of true SNPs and insertions
+    and deletions (indels) from sequencing and mapping errors in Whole
+    Exome Capture Sequencing (WECS) data. 
+  </longdescription>
   <upstream>
     <remote-id type="sourceforge">downloads</remote-id>
   </upstream>
